--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
 
     </style>
+	<!-- 删除统计
 	<script>
 var _hmt = _hmt || [];
 (function() {
@@ -177,6 +178,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+-->
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.4/lib/darkmode-js.min.js"></script>
 <script type="text/javascript" charset="UTF-8" src="https://api.isoyu.com/js/v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
 <div class="footer">
