--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@ var _hmt = _hmt || [];
 </script>
 -->
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.4/lib/darkmode-js.min.js"></script>
+<!--
 <script type="text/javascript" charset="UTF-8" src="https://api.isoyu.com/js/v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
+-->
+<script type="text/javascript" charset="UTF-8" src="v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
 <div class="footer">
 <a href="https://isoyu.com/sitemap/" target="_blank">SiteMap</a>
 <a href="https://isoyu.com/spider.html" target="_blank">INSObot</a>
