--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>INSO壁纸</title>
+    <title>来看看-壁纸</title>
         <!--[if IE]>
         	<link rel="stylesheet" href="//isoyu.com/static/css/ie.css" rel="stylesheet" type="text/css" />
         <![endif]-->
@@ -12,9 +12,9 @@
 		<meta property="og:site_name" content="INSO"/>
 		<meta name="referrer" content="origin"/>
 		<meta property="og:type" content="website"/>
-        <meta name="keywords" content="中国INSO,姬长信,热门搜索,最近热搜词,INSO,应搜,应搜索,INSO网络,INSO公司,INSO搜索,INSO谷歌,美国INSO,INSO搜索器,INSO浏览器,INSO互联网,INSO网络公司,INSO搜索引擎" />
-		<meta name="description" content="INSO是尊重您隐私的搜索引擎。建立于2007年致力成为全球最全面的搜索服务，INSO搜索创新于行业直线搜索更准、更快，高速纯净搜索网页信息，服务于安全绿色网页信息展示。" id="meta_description"/>
-		<meta property="og:description" content="INSO是尊重您隐私的搜索引擎。建立于2007年致力成为全球最全面的搜索服务，INSO搜索创新于行业直线搜索更准、更快，高速纯净搜索网页信息，服务于安全绿色网页信息展示。" id="meta_og_description"/>
+        <meta name="keywords" content="" />
+		<meta name="description" content="" id="meta_description"/>
+		<meta property="og:description" content="" id="meta_og_description"/>
 		<meta name="application-name" content="INSO"/>
 		<meta name="twitter:widgets:csp" content="on"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
@@ -180,10 +180,10 @@ var _hmt = _hmt || [];
 </script>
 -->
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.4/lib/darkmode-js.min.js"></script>
+<script type="text/javascript" charset="UTF-8" src="v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
+
 <!--
 <script type="text/javascript" charset="UTF-8" src="https://api.isoyu.com/js/v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
--->
-<script type="text/javascript" charset="UTF-8" src="v1.js" exte-id="548" data-size="36x140" data-color="#FF7119" data-show="1"></script>
 <div class="footer">
 <a href="https://isoyu.com/sitemap/" target="_blank">SiteMap</a>
 <a href="https://isoyu.com/spider.html" target="_blank">INSObot</a>
@@ -193,5 +193,6 @@ var _hmt = _hmt || [];
 <a href="https://t.me/INS_O" target="_blank">F.A.Q.</a>
 <a href="javascript:;">© 2007-2021 isoyu.com. All Rights Reserved.</a>
 </div>
+-->
 </body>
 </html>
