--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         	<link rel="stylesheet" href="//isoyu.com/static/css/ie.css" rel="stylesheet" type="text/css" />
         <![endif]-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-		<meta property="og:site_name" content="INSO"/>
+		<meta property="og:site_name" content="来看看"/>
 		<meta name="referrer" content="origin"/>
 		<meta property="og:type" content="website"/>
         <meta name="keywords" content="" />
@@ -49,7 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a href="javascript:void(0)" class="navbar-brand " onclick="title_image()">INSO壁纸</a>
+            <a href="javascript:void(0)" class="navbar-brand " onclick="title_image()">来看看-壁纸</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
