--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="keywords" content="" />
 		<meta name="description" content="" id="meta_description"/>
 		<meta property="og:description" content="" id="meta_og_description"/>
-		<meta name="application-name" content="INSO"/>
+		<meta name="application-name" content="来看看"/>
 		<meta name="twitter:widgets:csp" content="on"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes"/>
 		<meta name="msapplication-TileImage" content="//isoyu.com/images/favicon-144.png?1562914871166"/>
